# esp32-nostd-first-steps

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
