[package]
name = "esp32-nostd-first-steps"
version = "0.1.0"
authors = ["fusetim <fustim.log@gmx.com"]
edition = "2021"

[dependencies]
embassy-executor = { version = "0.5.0", features = [] }
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }
esp-backtrace = { version = "0.11.1", features = [
    "esp32",
    "halt-cores",
    "colors",
    "panic-handler",
    "exception-handler",
    "println"
] }
esp-hal = { version = "0.17.0", features = [
    "esp32",
    "async",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
] }
esp-println = { version = "0.9.1", features = ["esp32", "colors"] }


[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
opt-level        = 3
lto = 'fat'
overflow-checks  = false